--- a/ShoppingList/Base.lproj/Main.storyboard
+++ b/ShoppingList/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,99 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShoppingList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="HK3-sR-plz">
+                                <rect key="frame" x="0.0" y="620.5" width="375" height="46.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Zw-nr-CVZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="46.5"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="add"/>
+                                        <connections>
+                                            <action selector="addAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xaQ-ZQ-Xj4"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z6p-W6-iJB">
+                                        <rect key="frame" x="125" y="0.0" width="125" height="46.5"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Save"/>
+                                        <connections>
+                                            <action selector="saveButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jrc-Rq-l44"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5cj-CO-3nB">
+                                        <rect key="frame" x="250" y="0.0" width="125" height="46.5"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Add to Cart"/>
+                                        <connections>
+                                            <action selector="toCartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="E18-hJ-oVD"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="62z-Fl-Vtl">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="586.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" indentationWidth="10" reuseIdentifier="cell1" textLabel="H0a-Id-FZ1" style="IBUITableViewCellStyleDefault" id="kBO-ue-EgL">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kBO-ue-EgL" id="ybA-hh-kQu">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="H0a-Id-FZ1">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter in an Item to add to your list!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UoM-Bl-QIY">
+                                <rect key="frame" x="0.0" y="586.5" width="375" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="HK3-sR-plz" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="1yB-Ah-PCi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HK3-sR-plz" secondAttribute="trailing" id="2mz-8J-aSI"/>
+                            <constraint firstItem="62z-Fl-Vtl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="4o0-ii-6CZ"/>
+                            <constraint firstItem="62z-Fl-Vtl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8vT-ax-Jiu"/>
+                            <constraint firstItem="HK3-sR-plz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BfI-eX-Clw"/>
+                            <constraint firstItem="HK3-sR-plz" firstAttribute="top" secondItem="UoM-Bl-QIY" secondAttribute="bottom" id="Fgn-Wi-1Kt"/>
+                            <constraint firstItem="62z-Fl-Vtl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KZe-cB-qWW"/>
+                            <constraint firstItem="HK3-sR-plz" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.07" id="STA-pw-MtL"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="UvP-Hs-90L"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.0509745" id="WYh-za-yZj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HK3-sR-plz" secondAttribute="bottom" id="eSF-DU-ZEt"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="top" secondItem="62z-Fl-Vtl" secondAttribute="bottom" id="m3N-L6-b1k"/>
+                            <constraint firstItem="HK3-sR-plz" firstAttribute="top" secondItem="UoM-Bl-QIY" secondAttribute="bottom" id="sXs-4Z-Opf"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="szK-wf-iZV"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="udl-hc-OmY"/>
+                            <constraint firstItem="UoM-Bl-QIY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xSe-4K-xuk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableViewOutlet" destination="62z-Fl-Vtl" id="hXE-76-9bn"/>
+                        <outlet property="textFieldOutlet" destination="UoM-Bl-QIY" id="z5t-Vq-b3H"/>
+                        <outlet property="toCartOutlet" destination="5cj-CO-3nB" id="gmb-e1-I5L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.40000000000001" y="116.49175412293854"/>
         </scene>
     </scenes>
 </document>
